paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.compile.log
warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.rs:1:5
  |
1 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.rs:70:14
   |
70 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0499]: cannot borrow `logger` as mutable more than once at a time
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.rs:75:38
   |
75 |     let rc = pf[idx](&mut logger, f2(&mut logger), f3(&mut logger) + f4(&mut logger));
   |              ------- -----------     ^^^^^^^^^^^ second mutable borrow occurs here
   |              |       |
   |              |       first mutable borrow occurs here
   |              first borrow later used by call

error[E0499]: cannot borrow `logger` as mutable more than once at a time
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.rs:75:55
   |
75 |     let rc = pf[idx](&mut logger, f2(&mut logger), f3(&mut logger) + f4(&mut logger));
   |              ------- -----------                      ^^^^^^^^^^^ second mutable borrow occurs here
   |              |       |
   |              |       first mutable borrow occurs here
   |              first borrow later used by call

error[E0499]: cannot borrow `logger` as mutable more than once at a time
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/function_calls/sample_003/target.rs:75:73
   |
75 |     let rc = pf[idx](&mut logger, f2(&mut logger), f3(&mut logger) + f4(&mut logger));
   |              ------- ----------- first mutable borrow occurs here       ^^^^^^^^^^^ second mutable borrow occurs here
   |              |
   |              first borrow later used by call

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0499.
For more information about an error, try `rustc --explain E0277`.